tests/errors/test_44.x
// Expression may not be emitted if type unspecified

let y;

fn main() -> void {

    let x;

    let y = [];

}